VAN-4377 fix button text overflowing

--- a/vtr-ui/src/app/components/pages/page-security-wifi/children/wifi-security/wifi-security.component.scss
+++ b/vtr-ui/src/app/components/pages/page-security-wifi/children/wifi-security/wifi-security.component.scss
@@ -495,10 +495,12 @@
 			cursor: auto;
 		}
 	}
-	.button-box,
-	#sa-ws-btn-enablewifisecurity{
-		::ng-deep .vtr-ui-button .button-box .button{
-			max-width: 100%;
+	vtr-ui-button {
+		::ng-deep .vtr-ui-button{
+			max-width: 100% !important;
+			.button-box .button{
+				max-width: 100% !important;
+			}
 		}
 	}
 }
